hw03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  labels:
    app: hw-app-k8s

spec:
  replicas: 2
  selector:
    matchLabels:
      env: hw
  template:
    metadata:
      labels:
        env: hw
    spec:
      containers:
      - name: hw-app
        image: pisklovcor/hw-02-docker:dockerfile
        ports:
          - containerPort: 8000
