hw03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-service

spec:
  selector:
    env: hw
  ports:
    - protocol  : TCP
      port      : 80
      targetPort: 8000
  type: ClusterIP
