hw03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
        - path: "/health"
          pathType: Prefix
          backend:
            service:
              name: hw-service
              port:
                number: 80
